fixed #523: iOS8 bug of picker not showing in view

--- a/demo/styles/css/main.css
+++ b/demo/styles/css/main.css
@@ -728,7 +728,8 @@ input[type=email]:focus,
 input[type=date]:focus,
 input[type=number]:focus,
 input[type=search]:focus,
-textarea:focus {
+textarea:focus,
+input.picker__input--target {
   outline: none;
   border-color: #0089ec;
 }
