--- a/demo/styles/less/base.less
+++ b/demo/styles/less/base.less
@@ -361,7 +361,8 @@ input[type=email]:focus,
 input[type=date]:focus,
 input[type=number]:focus,
 input[type=search]:focus,
-textarea:focus {
+textarea:focus,
+input.picker__input--target {
     outline: none;
     border-color: @blue;
 }
